--- a/staplesgotclass/Base.lproj/Main.storyboard
+++ b/staplesgotclass/Base.lproj/Main.storyboard
@@ -1340,7 +1340,7 @@
                             <outlet property="delegate" destination="yPi-Le-xdF" id="LLL-Vv-wH0"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Thursday, August 11, 2016" id="n2c-m7-bgN">
+                    <navigationItem key="navigationItem" title="Thursday, August 11, 2016" prompt="test" id="n2c-m7-bgN">
                         <barButtonItem key="rightBarButtonItem" image="dateSearch.png" id="Iod-PV-hs0">
                             <connections>
                                 <action selector="dateChosen:" destination="yPi-Le-xdF" id="jnQ-ec-cvq"/>
@@ -2689,7 +2689,7 @@
         <segue reference="Fa7-BJ-f92"/>
         <segue reference="uxm-2y-bLg"/>
         <segue reference="ub8-Te-EcC"/>
-        <segue reference="Wk5-fx-GIZ"/>
+        <segue reference="xTU-HF-hhu"/>
         <segue reference="X5m-eg-DKD"/>
     </inferredMetricsTieBreakers>
 </document>
